--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <script src="build/js/lib/require.js" type="text/javascript" charset="utf-8"></script>
 <script src="build/js/lib/config.js"></script>
-<script src="build/js/index/index.js" type="text/javascript" charset="utf-8"></script>
+<script src="build/js/pages/index/index.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
